# sentry-agent-pc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE_SIGNING.md
installer/: ChipmoSentry.iss
scripts/: build_exe.ps1  diagnose_hwaccel.py  diagnose_local_view.py  edge_bench.py  export_yoloe_items.py  gen_signing_key.py  generate_icons.py  sign_release.py
src/sentry_agent_pc/: __init__.py  autostart.py  backend_client.py  config_file.py  dpapi.py  gui_main.py  logging_setup.py  main.py  redact.py  resources.py  settings.py  state.py  updater.py
src/sentry_agent_pc/assets/floorplan/: app.js  app3d.js  index.html
src/sentry_agent_pc/discovery/: __init__.py  frame_grab.py  manual.py  onvif.py  rtsp_paths.py  rtsp_probe.py  snapshot.py
src/sentry_agent_pc/edge/: __init__.py  behavior.py  behaviors_common.py  config.py  config_poller.py  controller.py  detector.py  ov_lean.py  overlay.py  pipeline.py  recorder.py  runtime.py  skeleton_anomaly.py  uploader.py  zones.py
src/sentry_agent_pc/gui/: __init__.py  add_dialog.py  app.py  datatable.py  edit_dialog.py  floor_plan.py  floor_plan_model.py  floor_plan_web.py  live_view.py  local_view.py  scan_dialog.py  tray.py  update_dialog.py  widgets.py  zone_editor.py  zone_geometry.py
src/sentry_agent_pc/services/: __init__.py  discovery_service.py
src/sentry_agent_pc/streaming/: __init__.py  controller.py  local_mediamtx.py  pusher.py  tunnel.py
tests/: test_auto_update.py  test_autostart.py  test_brand_templates.py  test_dpapi.py  test_edge.py  test_edge_behavior.py  test_edge_config.py  test_edge_config_poller.py  test_edge_controller.py  test_edge_latest_tracks.py  test_edge_ov_lean.py  test_edge_pipeline.py  test_edge_recorder.py  test_edge_runtime.py  test_edge_skeleton_anomaly.py  test_edge_uploader.py  test_edge_zone_behavior.py  test_edge_zones.py  test_edit_camera.py  test_floor_plan_api.py  test_floor_plan_model.py  test_local_mediamtx.py  test_local_view.py  test_onvif_parser.py  test_pusher.py  test_resolver.py  test_rtsp_probe.py  test_snapshot.py  test_state.py  test_stream_controller.py  test_tunnel.py  test_update_script.py  test_updater.py  test_zone_geometry.py  test_zones.py
