[project]
name = "sentry-agent-pc"
version = "0.7.100"
description = "Chipmo Sentry Windows agent — ONVIF camera discovery + manual add + backend registration"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "Apache-2.0" }
authors = [{ name = "Tuguldur Enkhtuvshin", email = "tuguldur.enkhtuvshin@yahoo.com" }]

dependencies = [
    "httpx>=0.27,<0.30",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "structlog>=24.2,<26.0",
    # ONVIF
    "onvif-zeep>=0.2.12,<0.3",
    # CLI
    "typer>=0.12,<1.0",
    "rich>=13.7,<15.0",
    # Encryption (DPAPI fallback for non-Windows; pywin32 for actual DPAPI on Windows)
    "cryptography>=43.0,<46.0",
    # Desktop GUI (PyInstaller-friendly; bundles into ~30 MB .exe)
    "customtkinter>=5.2.2,<6.0",
    "pillow>=10.0,<12.0",
    # Embedded live view — webview window loading the web /live page.
    # On Windows uses the system WebView2 (EdgeChromium) runtime via pythonnet.
    "pywebview>=5.0,<6.0",
    # Offline LAN live view — decode camera RTSP directly (no internet/MediaMTX/
    # login) and render a grid in the app. headless = no Qt/GTK GUI deps (we draw
    # frames via Pillow into tkinter), so it stays light.
    "opencv-python-headless>=4.10,<5.0",
    # System tray icon (minimize-to-tray + autostart toggle).
    "pystray>=0.19,<0.20",
    # Edge Stage-1 inference runtime — runs the bundled YOLO OpenVINO IR on the
    # store PC's Intel iGPU/CPU. numpy comes transitively (opencv) but the edge
    # decoders use it directly, so pin it explicitly. ultralytics is NOT here —
    # it's BUILD-time only (model export) + the dev bench; the product ships lean.
    "openvino>=2024.0,<2026.0",
    "numpy>=1.26,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-mock>=3.14,<4.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "respx>=0.21,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentry_agent_pc"]

[tool.uv]
package = true

[project.scripts]
sentry-agent-pc = "sentry_agent_pc.main:app"
sentry-agent-gui = "sentry_agent_pc.gui_main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4",
    "PIE", "T20", "RET", "SIM", "ARG", "PTH",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "S101"]
# CLI helper scripts legitimately print to stdout.
"scripts/**" = ["T201"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["sentry_agent_pc"]

[[tool.mypy.overrides]]
module = [
    "onvif.*", "zeep.*", "customtkinter.*", "webview.*", "pystray.*",
    # Edge Stage-1 bench/detector optional deps (not in the lean core install).
    "ultralytics.*", "openvino.*", "psutil.*",
]
ignore_missing_imports = true

# customtkinter ships no type stubs → subclassing its widgets trips
# disallow_subclassing_any under strict. Relax just for the GUI layer.
[[tool.mypy.overrides]]
module = ["sentry_agent_pc.gui.*"]
disallow_subclassing_any = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
